llvm/dev/assoc.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/dev/assoc.llvm:1:1: error: expected top-level entity
LogError: Unknown variable name
^
